--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+html {
+    background-image: url(./static/img/background.jpg);
+}
+
 .items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
