--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(244, 247, 184);
+     background-color: rgb(244, 247, 184); 
 }
 
 .logo {
@@ -18,10 +18,6 @@ body {
 
 .shop_logo img{
   width: 150px;
-}
-
-.icon {
-  background-image: url(img/pile.png);
 }
 
 .account_content{
@@ -47,12 +43,15 @@ body {
 /* code for login and registartion */
 
 form, .content{
-	
-	margin: 50px auto;
+	max-width:300px;
+	min-height: auto;
+	margin: 10px auto;
 	border:  thin solid #e4e4e4;
-	padding: 40px 30px;
+	padding: 10px 30px;
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-	background-color: white;
+	background-color:  rgb(243, 174, 148);
+  border-radius: 6px;
+ text-align: center;
 }
 
 form h2{
@@ -64,13 +63,13 @@ form h4{
 	font-weight: normal;
 }
 form h4 span{
-	color:  coral;
+	color:  rgb(125, 120, 120);
 	font-weight: bold;
 	text-decoration: underline;
 }
 form label{
 	display: block;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	padding-left: 5px;
 }
 
@@ -78,10 +77,11 @@ form input, form textarea{
 	display: block;
 	width:  100%;
 	padding: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	font-size: 16px;
 	border:  thin solid #e4e4e4;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+  border-radius: 6px;
 }
 
 form select{
@@ -93,6 +93,7 @@ form select{
 	border:  thin solid #e4e4e4;
 	background-color: white;
 	color: #555;
+    border-radius: 6px;
 }
 
 form input:focus
@@ -110,14 +111,15 @@ form input::placeholder{
 }
 
 form button{
-	background: #32749a;
-	color: white;
+	background: #8dd07c;
+	color: rgb(77, 76, 76);
 	border: none;
 	padding: 15px;
 	width:  100%;
 	font-size: 16px;
 	margin-top: 20px;
 	cursor: pointer;
+  border-radius: 6px;
 }
 
 form button:active{
@@ -156,136 +158,12 @@ form button:active{
 	margin-top: 50px;
 }
 
-/* .menu{
-  background-image: url(img/background.jpg);
-} */
-
-.content main h3{
-
+.orderForm{
+	margin: 10px auto;
+	border:  thin solid #e4e4e4;
+	padding: 10px 30px;
+	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+	background-color:  rgb(243, 174, 148);
+  border-radius: 6px;
+ text-align: center;
 }
-
-
-/* .container{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  text-align: center;
-  justify-content: center;
-}
-.control_buttons {
-  font-size: 8px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-} 
-
-.items {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.item {
-    margin: 5px;
-    padding: 30px;
-    background-color: rgb(214, 214, 214);
-}
-
-.item:hover {
-    background-color: gray;
-}
-
-.till__display {
-    margin: 2rem 25vw;
-    text-align: center;
-}
-
-.till__console {
-    padding: 1rem;
-    background-color: rgb(209, 135, 199);
-    color: rgb(3, 2, 3);
-    font-size: 1.25rem;
-}
-
-.checkout {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.checkout button {
-    margin: 1rem 25vw;
-    padding: 1rem;
-    background-color: rgb(119, 176, 186);
-    font-size: 1.25 rem;
-
-}
-
-
-button:hover {
-    cursor: pointer;
-}
-
-
-.login {
-    border: 2px solid #f1f1f1;
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  
-  .login input {
-   
-   padding:3px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 3px;
-  }
-  
-  /* Set a style for all buttons 
-  .login button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-  }
-  
- 
-  .login button:hover {
-    opacity: 0.8;
-  }
-  
-
-  .cancelbtn {
-    width: auto;
-    padding: 2px;
-    background-color: #e1837d;
-  }
-  
-  .registerbtn {
-   
-    padding:2px;
-    background-color: #85e17d;
-  }
- 
- 
-  .container {
-    padding:8px;
-  }
-  
- 
-  /*  Change styles for span and cancel button on extra small screens 
-  @media screen and (max-width: 300px) {
-    span.psw {
-      display: block;
-      float: none;
-    }
-    .cancelbtn {
-      width: 100%;
-    }} */ 
