--- a/css/style.css
+++ b/css/style.css
@@ -1,178 +1,186 @@
 body {
-     background-color: rgb(244, 247, 184); 
+    background-color: rgb(244, 247, 184); 
 }
 
 .logo {
-    font-size: 50px;
-    color: rgb(146, 106, 179);
-    justify-content: center;
-    font-family: cursive;
+   font-size: 50px;
+   color: rgb(146, 106, 179);
+   justify-content: center;
+   font-family: cursive;
 }
 
 .shop_logo{
-  display: flex;
-  gap: 20px;
-  align-items: center;
-  justify-content: center;
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ justify-content: center;
 }
 
 .shop_logo img{
-  width: 150px;
+ width: 150px;
 }
 
 .account_content{
-  display: flex;
-  flex-direction: row;
+ display: flex;
+ flex-direction: row;
 }
 
 .header{
-  display:flex;
-  flex-direction: row;
-  gap:100px;
+ display:flex;
+ flex-direction: row;
+ gap:100px;
 
 }
 .header a{
-  font-size: 15px;
-  color: #555;
-  border-style:outset;
-  padding: 2px;
-  border-color: rgb(186, 189, 134);
-  border-radius: 5px;
+ font-size: 15px;
+ color: #555;
+ border-style:outset;
+ padding: 2px;
+ border-color: rgb(186, 189, 134);
+ border-radius: 5px;
 }
 
 /* code for login and registartion */
 
- .welcome{
-	max-width:300px;
-	min-height: auto;
-	margin: 10px auto;
-	border:  thin solid #e4e4e4;
-	padding: 10px 30px;
-	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-	background-color:  rgb(243, 174, 148);
-  border-radius: 6px;
- text-align: center;
+.welcome{
+   max-width:300px;
+   min-height: auto;
+   margin: 10px auto;
+   border:  thin solid #e4e4e4;
+   padding: 10px 30px;
+   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+   background-color:  rgb(243, 174, 148);
+ border-radius: 6px;
+text-align: center;
 }
 
 form h2{
-	margin-bottom: 10px;
+   margin-bottom: 10px;
 }
 
 form h4{
-	margin-bottom: 40px;
-	font-weight: normal;
+   margin-bottom: 40px;
+   font-weight: normal;
 }
 form h4 span{
-	color:  rgb(125, 120, 120);
-	font-weight: bold;
-	text-decoration: underline;
+   color:  rgb(125, 120, 120);
+   font-weight: bold;
+   text-decoration: underline;
 }
 form label{
-	display: block;
-	margin-bottom: 5px;
-	padding-left: 5px;
+   display: block;
+   margin-bottom: 5px;
+   padding-left: 5px;
 }
 
 form input, form textarea{
-	display: block;
-	width:  100%;
-	padding: 10px;
-	margin-bottom: 5px;
-	font-size: 16px;
-	border:  thin solid #e4e4e4;
-	margin-bottom: 10px;
-  border-radius: 6px;
+   display: block;
+   width:  100%;
+   padding: 10px;
+   margin-bottom: 5px;
+   font-size: 16px;
+   border:  thin solid #e4e4e4;
+   margin-bottom: 10px;
+ border-radius: 6px;
 }
 
 form select{
-	display: block;
-	width:  100%;
-	margin-bottom: 10px;
-	padding: 10px;
-	font-size: 16px;
-	border:  thin solid #e4e4e4;
-	background-color: white;
-	color: #555;
-    border-radius: 6px;
+   display: block;
+   width:  100%;
+   margin-bottom: 10px;
+   padding: 10px;
+   font-size: 16px;
+   border:  thin solid #e4e4e4;
+   background-color: white;
+   color: #555;
+   border-radius: 6px;
 }
 
 form input:focus
 {
-	outline: none;
-	border: thin solid coral;
+   outline: none;
+   border: thin solid coral;
 }
 
 form textarea{
-	min-height: 150px;
+   min-height: 150px;
 }
 
 form input::placeholder{
-	font-size: 16px;
+   font-size: 16px;
 }
 
 form button{
-	background: #8dd07c;
-	color: rgb(77, 76, 76);
-	border: none;
-	padding: 15px;
-	width:  100%;
-	font-size: 16px;
-	margin-top: 20px;
-	cursor: pointer;
-  border-radius: 6px;
+   background: #8dd07c;
+   color: rgb(77, 76, 76);
+   border: none;
+   padding: 15px;
+   width:  100%;
+   font-size: 16px;
+   margin-top: 20px;
+   cursor: pointer;
+ border-radius: 6px;
 }
 
 form button:active{
-	background-color: green;
+   background-color: green;
 }
 
 .error{
-	margin-top: 30px;
-	color: #af0c0c;
+   margin-top: 30px;
+   color: #af0c0c;
 }
 
 .success{
-	margin-top: 30px;
-	color: green;
+   margin-top: 30px;
+   color: green;
 }
 
 .content header a{
-	text-decoration: none;
-	padding: 6px 20px;
-	border: thin solid #d4d4d4;
-	font-size: 14px;
-	font-weight: normal;
-	background: #e4e4e4;
-	color: #555;
+   text-decoration: none;
+   padding: 6px 20px;
+   border: thin solid #d4d4d4;
+   font-size: 14px;
+   font-weight: normal;
+   background: #e4e4e4;
+   color: #555;
 }
 
- .content header{
-	 display: flex;
-	 justify-content: space-between;
-	 align-items: center;
-	 border-bottom: thin solid #e4e4e4;
-	 padding-bottom: 30px;
- }
+.content header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: thin solid #e4e4e4;
+    padding-bottom: 30px;
+}
 
 .content main{
-	margin-top: 50px;
+   margin-top: 50px;
 }
 
 .order{
-	display: flex;
-	 justify-content: space-between;
-	 align-items: center;
+   display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .orderForm{
 width: 80%;
-	background-color:  rgb(243, 174, 148);
-  border-radius: 6px;
- text-align: center;
+   background-color:  rgb(243, 174, 148);
+ border-radius: 6px;
+text-align: center;
 }
 
 .toppings {
-	display: flex;
-	flex-direction: row;
-	gap: 30px;
+   display: flex;
+   flex-direction: row;
+   gap: 30px;
+}
+
+.orderContainer {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+   text-align: center;
 }
